# rust_dynamic

./: .gitignore  Cargo.toml  Makefile  README.md
Documentation/: RELEASE_NOTES_0.10.0.md  RELEASE_NOTES_0.11.0.md  RELEASE_NOTES_0.12.0.md  RELEASE_NOTES_0.13.0.md  RELEASE_NOTES_0.14.0.md  RELEASE_NOTES_0.15.0.md  RELEASE_NOTES_0.16.0.md  RELEASE_NOTES_0.17.0.md  RELEASE_NOTES_0.18.0.md  RELEASE_NOTES_0.19.0.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.23.0.md  RELEASE_NOTES_0.24.0.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.31.0.md  RELEASE_NOTES_0.32.0.md  RELEASE_NOTES_0.33.0.md  RELEASE_NOTES_0.34.0.md  RELEASE_NOTES_0.35.0.md  RELEASE_NOTES_0.36.0.md  RELEASE_NOTES_0.37.0.md  RELEASE_NOTES_0.38.0.md  RELEASE_NOTES_0.39.0.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.40.0.md  RELEASE_NOTES_0.49.0.md  RELEASE_NOTES_0.5.0.md  RELEASE_NOTES_0.6.0.md  RELEASE_NOTES_0.7.0.md  RELEASE_NOTES_0.8.0.md  RELEASE_NOTES_0.9.0.md
src/: applicative.rs  attr.rs  bincode.rs  bind.rs  carcdr.rs  cast.rs  cast_generic.rs  cast_json_to_value.rs  cast_matrix.rs  cast_value_to_json.rs  checker.rs  conv.rs  conv_inner.rs  create.rs  create_complex.rs  create_curry.rs  create_generic.rs  create_lambda.rs  create_list.rs  create_map.rs  create_matrix.rs  create_metrics.rs  create_special.rs  create_special_float.rs  ctx.rs  ctxapplicative.rs  display.rs  dup.rs  eq.rs  error.rs  export.rs  func.rs  get.rs  has_key.rs  hash.rs  id.rs  iter.rs  json.rs  len.rs  lib.rs  (+19 more)
tests/: applicative-test.rs  attr-test.rs  bincode-test.rs  carcdr-test.rs  cast-test.rs  cmp-test.rs  complex-test.rs  conv-inner-test.rs  conv-test.rs  ctx-test.rs  dict-test.rs  display-test.rs  dummy-test.rs  enum-test.rs  export-test.rs  general-test.rs  iter-test.rs  json-test.rs  len-test.rs  map-test.rs  math-test.rs  metrics-test.rs  pull-test.rs  push-test.rs  reduce-test.rs  tags-test.rs  tensor-test.rs  types-test.rs
