[package]
name = "rust_dynamic"
description = "Support for dynamically-typed values in run-time"
version = "0.45.0"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/vulogov/rust_dynamic"
categories = ["data-structures"]
keywords = ["value", "dynamic", "data", "value-object"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode2 = "2.0.*"
chrono = "0.4.*"
dtoa = "1.0.*"
easy-error = "1.0.0"
itoa = "1.0.*"
json_value_merge = "2.0.0"
nanoid = "0.4.*"
num = "0.4.*"
rustils = "0.1.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version="1.0.*", default-features = true }
unix-ts = { version=">=1.*.*" }
